:hammer: update scanner proto
